Fix horizontal scroll

--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -13,8 +13,9 @@ html,
 body { 
   scroll-behavior: smooth; 
   font-family: Signika;
-  min-width: 100vw;
+  width: 100vw;
   min-height: 100vh;
+  overflow-x: hidden;
 }
 
 a {
